appsettings.json changed

--- a/RouletteWebApi/appsettings.json
+++ b/RouletteWebApi/appsettings.json
@@ -2,7 +2,7 @@
   "RouletteDatabaseSettings": {
     "RoulettesCollectionName": "Roulettes",
     "BetsCollectionName": "Bets",
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RouletteDb"
   },
   "Logging": {
